# Linear-Algebra-API

./: CMakeLists.txt  GenericExample.cpp  GenericExample.h  HypreExample.cpp  HypreExample.h  PETScExample.cpp  PETScExample.h  README.md  Test.cpp  main.cpp
LocalAlgebra/: CMakeLists.txt  LocalLinearAlgebra.cpp  LocalLinearAlgebra.h
